19506 FIX Fix dialog background color in light theme
When using the light theme, the dialog panels shown in
the quick activation of changes had the same background
color as their parent component. This caused the limits
of these dialog panels to be invisible. The background
color is now changed so that the dialog panel borders
are visible.

CMK-32327

--- a/packages/cmk-frontend-vue/src/assets/variables.css
+++ b/packages/cmk-frontend-vue/src/assets/variables.css
@@ -107,6 +107,8 @@
     --help-text-bg-color: var(--ux-theme-5);
     --help-text-font-color: var(--color-conference-grey-100);
     --dropdown-chevron-indicator-color: var(--color-conference-grey-100);
+    --default-dialog-bg-color: var(--ux-theme-3);
+    --default-dialog-font-color: var(--font-color);
     --form-element-required-color: var(--success-dimmed-2);
     --input-hover-bg-color: var(--ux-theme-4);
     --code-background-color: var(--color-daylight-grey-50);
@@ -227,7 +229,7 @@
     --help-text-font-color: var(--color-conference-grey-100);
     --dropdown-chevron-indicator-color: var(--color-white-100);
     --default-dialog-bg-color: var(--ux-theme-5);
-    --default-dialog-font-color: var(--color-white-100);
+    --default-dialog-font-color: var(--font-color);
     --form-element-required-color: var(--success);
     --input-hover-bg-color: var(--ux-theme-4);
     --code-background-color: var(--ux-theme-0);
